# fastapi-cqrs

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
src/: main.py
src/api/auth/: __init__.py  routes.py
src/api/auth/commands/: __init__.py  check_auth_command.py
src/api/health/: __init__.py  routes.py
src/api/health/models/: __init__.py  health_status.py
src/api/health/queries/: __init__.py  health_check_query.py
src/api/health/schemas/: __init__.py  health_response.py
src/common/: __init__.py  dependencies.py  mediator.py  query_handler.py
src/infrastructure/: auth.py  dependencies.py  mediator.py  request_handler.py
src/services/: auth.py
tests/: conftest.py
tests/api/: __init__.py
tests/api/auth/: test_routes.py
tests/api/health/: test_routes.py
tests/api/health/queries/: test_health_check_query.py
