[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["maxbeaudoin <beaudoin.maxime@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]